samples/_failures_safe/1761559179_31c10e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cf161fe.c: In function ‘handle_event’:
./samples/SAFE/__tmp_9cf161fe.c:151:13: error: expected expression at end of input
  151 |             if (
      |             ^~
./samples/SAFE/__tmp_9cf161fe.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9cf161fe.c:151:13: error: expected declaration or statement at end of input
